--- a/bib/itip-refs.bib
+++ b/bib/itip-refs.bib
@@ -248,6 +248,25 @@
   url = {http://www.sciencedirect.com/science/article/pii/S0888613X11000491}
 }
 
+@ARTICLE{1954:choquet,
+  author = {Choquet, G.},
+  title = {Theory of capacities},
+  journal = {Annales de l'Institut Fourier},
+  year = {1954},
+  volume = {5},
+  pages = {131--295}
+}
+
+@ARTICLE{1989:murofushi,
+  author = {Murofushi, T. and Sugeno, M.},
+  title = {An interpretation of fuzzy measures and the {C}hoquet integral as
+	an integral with respect to a fuzzy measure},
+  journal = {Fuzzy sets and Systems},
+  year = {1989},
+  volume = {29},
+  pages = {201--227}
+}
+
 @incollection{itip-desirable,
     author    = "Erik Quaeghebeur",
     title     = "Desirability",
