--- a/bib/other-refs.bib
+++ b/bib/other-refs.bib
@@ -260,3 +260,21 @@ author = "W.F. Werner and M. Hirano and S. Kondo and G. Johanson and J.M. Lanore
   pages = {303--328},
 }
 
+@book{1976:shortliffe,
+   author={Shortliffe, Edward Hance},
+   title={Computer-based medical consultations: {MYCIN}},
+   year={1976},
+   ISBN={0-4440-0179-4},
+   publisher={Elsevier},
+   address={New York},
+}
+
+@book {1999:klir,
+    AUTHOR = {Klir, George J. and Wierman, Mark J.},
+     TITLE = {Uncertainty-based Information. Elements of Generalized Information Theory},
+ PUBLISHER = {Physika},
+   ADDRESS = {Heidelberg},
+      YEAR = {1999},
+}
+
+
