diss: corrections motivation

--- a/bib/itip-refs.bib
+++ b/bib/itip-refs.bib
@@ -267,6 +267,30 @@
   pages = {201--227}
 }
 
+@article{2004:Coolen:Yan,
+    Author = {Coolen, F. and Yan, K.},
+    Journal = {Journal of Statistical Planning and Inference},
+    Pages = {25--54},
+    Title = {Nonparametric predictive inference with right-censored data},
+    Volume = 126,
+    Year = 2004}
+
+@BOOK{2003:manski,
+  title = {{P}artial {I}dentification of {P}robability {D}istributions},
+  publisher = {Springer},
+  year = {2003},
+  author = {Manski, C.},
+  address = {New York}
+}
+
+@article{vansteelandt2006,
+    Author = {Vansteelandt, S. and Goetghebeur, E. and Kenward, M. and Molenberghs, G.},
+    Journal = {Statistica Sinica},
+    Pages = {953},
+    Title = {Ignorance and uncertainty regions as inferential tools in a sensitivity analysis},
+    Volume = {16},
+    Year = {2006}}
+
 @incollection{itip-desirable,
     author    = "Erik Quaeghebeur",
     title     = "Desirability",
