--- a/bib/other-refs.bib
+++ b/bib/other-refs.bib
@@ -242,6 +242,16 @@ author = "W.F. Werner and M. Hirano and S. Kondo and G. Johanson and J.M. Lanore
   publisher={Springer},
 }
 
+@inreference{2011:IESS-npi,
+  author = {Frank P.A. Coolen},
+  title = {Nonparametric Predictive Inference},
+  editor = {Lovric, Miodrag},
+  booktitle = {International Encyclopedia of Statistical Science},
+  year = {2011},
+  address={Berlin},
+  publisher={Springer},
+}
+
 @article{1981:derobertis,
   author = {DeRobertis, L. and Hartigan, J.A.},
   title = {Bayesian Inference using intervals of measures},
@@ -276,5 +286,24 @@ author = "W.F. Werner and M. Hirano and S. Kondo and G. Johanson and J.M. Lanore
    ADDRESS = {Heidelberg},
       YEAR = {1999},
 }
+
+@COLLECTION{2006:lawry,
+  title = {Soft Methods in Integrated Uncertainty Modelling},
+  editor = {Lawry, J. and Miranda, E. and Bugarin, A. and Li, S. and Gil, M.
+    and Grzegiorzewski, P. and Hryniewicz, O.},
+  publisher = {Springer},
+  address = {Berlin/Heidelberg},
+  year = {2006},
+}
+
+@article{1958:kaplan,
+  author = {Kaplan, E.L. and Meier, P.},
+  title = {Nonparametric Estimation from Incomplete Observations},
+  journal = {Journal of the American Statistical Association},
+  year = {1958},
+  volume = {53},
+  pages = {457--481},
+}
+
 
 
