--- a/intro.tex
+++ b/intro.tex
@@ -33,7 +33,9 @@ have been written primarily by Matthias Troffaes.
 Sec.~\ref{sec:ip-intro} was newly written for this thesis,
 except Sec.~\ref{sec:imprecisebayes}, which is based on \textcite[\S 8.4.2]{itip-statinf}.
 
-
+Also Sec.~\ref{sec:motivation} was devised especially for the thesis,
+under use of \textcite[\S 8.2.3]{itip-statinf} for some paragraphs in
+Sec.~\ref{sec:motivation:bayesian}, and ***
 
 \section{Notation}
 \label{sec:notation}
