diss: par in inference procedure, alternative models, plus small honings

--- a/bib/itip-refs.bib
+++ b/bib/itip-refs.bib
@@ -291,6 +291,15 @@
     Volume = {16},
     Year = {2006}}
 
+@book{1998:gilks,
+    Address = {Boca Raton, FL},
+    Editor = {Gilks, W.},
+    Publisher = {Chapman \& Hall/CRC},
+    Title = {Markov Chain Monte Carlo in Practice},
+    Year = {1998}}
+
+
+
 @incollection{itip-desirable,
     author    = "Erik Quaeghebeur",
     title     = "Desirability",
@@ -314,6 +323,16 @@
 @incollection{itip-other,
     author    = "S\'{e}bastian Destercke and Didier Dubois",
     title     = "Other Uncertainty Theories based on Capacities",
+    booktitle = "Introduction to Imprecise Probabilities",
+    publisher = "Wiley",
+    year      = "2013",
+    note      = "In preparation",
+    editor    = "Frank P.A. Coolen and Matthias C. M. Troffaes and Thomas Augustin and Gert de Cooman",
+}
+
+@incollection{itip-computation,
+    author    = "Matthias C.M. Troffaes and Robert Hable",
+    title     = "Computation",
     booktitle = "Introduction to Imprecise Probabilities",
     publisher = "Wiley",
     year      = "2013",
